# auto-white-paper

./: .env.example  .gitignore  README.md  pyproject.toml
cli/: package.json
cli/src/: index.js
cli/src/commands/: analyze.js  export.js  generate.js  init.js
src/: __init__.py  cli.py  main.py
src/agents/: __init__.py  base_agent.py  conclusion.py  discussion.py  existing_methods.py  experiments.py  implementation.py  introduction.py  proposed_method.py
src/analyzer/: __init__.py  code_parser.py  repository.py  structure.py
src/output/: __init__.py  latex_converter.py  markdown_writer.py
src/pipeline/: __init__.py  orchestrator.py
src/services/figures/: __init__.py  diagram_generator.py
src/services/literature/: __init__.py  genspark_client.py
src/services/llm/: __init__.py  claude_client.py  prompt_manager.py
src/utils/: __init__.py  config.py  logger.py
templates/config/: default_config.yaml
templates/prompts/: chapter1_intro.yaml  chapter2_existing.yaml  chapter3_proposed.yaml  chapter4_impl.yaml  chapter5_experiments.yaml  chapter6_discussion.yaml  chapter7_conclusion.yaml
